--- a/name/package.json
+++ b/name/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "^2.12.1",
-    "react-native-safe-area-context": "^4.7.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "^4.6.3",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
